Add ListView class in views

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 <nav>
     <span id="buttons">
         <a id="homepage-sign" href="{% url 'homepage' %}">HOMEPAGE</a>
-        <a id="app-sign" href="{% url 'homepage' %}">To Do APP</a>
+        <a id="app-sign" href="{% url 'task-list' %}">To Do APP</a>
     </span>
     <span id="log">
         <a href="{% url 'homepage' %}">Login</a>
