--- a/todolist/templates/todolist/homepage.html
+++ b/todolist/templates/todolist/homepage.html
@@ -4,22 +4,7 @@
 {% block content %}
     <div>
 <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
-        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
+       =)<p><p>WELCOME - It's TO DO APP =)<p>        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
         <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
         <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>        <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
         <p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p><p>WELCOME - It's TO DO APP =)<p>
