--- a/todolist/static/todolist/todolist.css
+++ b/todolist/static/todolist/todolist.css
@@ -1,14 +1,88 @@
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Pixelify+Sans&family=Roboto+Condensed:wght@300&family=Young+Serif&display=swap');
 
 .content {
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    width: 80%;
+    width: 90%;
     background-color: azure;
     border-radius: 1rem;
-    font-size: 1.4rem;
+    font-size: 1rem;
     padding: 20px 10px 20px;
     text-align: center;
-    display: flex;
+    display: block;
     justify-content: center;
+}
+
+a {
+    padding-left: 6px;
+    padding-right: 6px;
+}
+
+br {
+    color: black;
+}
+
+
+.single-task {
+    display: flex;
+    padding: 10px;
+    text-align: center;
+    border-top: 1px solid #ccc;
+    align-items: center;
+}
+
+.table-header {
+    display: flex;
+    padding: 10px;
+}
+
+#id-title, #title-tb {
+    width: 50%;
+}
+
+#deadline, #deadline-tb {
+    width: 12%;
+    text-align: center;
+}
+
+#countdown, #countdown-tb {
+    width: 8%;
+    text-align: center;
+}
+
+#countdown {
+    color: red;
+}
+
+
+#actions-tb, #actions {
+    width: 25%;
+}
+
+button {
+    padding: 5px;
+    border-radius: 40%;
+    background-color: #90b6ff;
+    font-family: 'Dela Gothic One', cursive;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    border: none;
+    cursor: pointer;
+}
+
+svg {
+    vertical-align: -2px;
+    margin-right: 3px;
+}
+
+#done-btn:hover {
+    background-color: #4CAF50;
+}
+
+#delete-btn:hover {
+    background-color: #ff7a5c;
+}
+
+#detail-btn:hover {
+    background-color: #47dfff;
 }
