--- a/todolist/templates/todolist/todolist.html
+++ b/todolist/templates/todolist/todolist.html
@@ -10,11 +10,48 @@
 
 {% block content %}
     <div class="content">
-        <ol class="tasks">
+            <div class="table-header">
+                <span id="title-tb">TITLE</span>
+                <span id="deadline-tb">DEADLINE</span>
+                <span id="countdown-tb">DAYS LEFT</span>
+                <span id="actions-tb">ACTIONS</span>
+            </div>
+            <br>
             {% for task in tasks %}
-                <li>{{ task.title }}</li>
-                <li>{{ task.title }}</li>
+                <div class="single-task">
+                    <div id="id-title">{{ task.title.capitalize }}</div>
+                    <div id="deadline">{{ task.deadline|date:'d.m.Y, H:i' }}</div>
+                    <div id="countdown">
+                    {% for key, value in time_left.items %}
+                        {% if key == task.id %}
+                            {{ value }}
+                        {% endif %}
+                    {% endfor %}
+                    </div>
+                    <div id="actions">
+                        <a href="{% url 'single-task' task.slug %}">
+                        <button id="detail-btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>
+                            </svg>
+                            Details
+                        </button>
+                        </a>
+                        <button id="done-btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"></path>
+                            </svg>
+                            Done</button>
+                        <button id="delete-btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"></path>
+                            </svg>
+                            Delete</button>
+                    </div>
+                </div>
             {% endfor %}
-        </ol>
     </div>
 {% endblock %}
