--- a/todolist/static/todolist/todolist.css
+++ b/todolist/static/todolist/todolist.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Pixelify+Sans&family=Roboto+Condensed:wght@300&family=Young+Serif&display=swap');
 
+
 .content {
     margin-left: auto;
     margin-right: auto;
@@ -57,12 +58,18 @@ br {
 
 
 #actions-tb, #actions {
-    width: 25%;
+    width: 30%;
 }
+
+#actions {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 
 button {
     padding: 5px;
-    border-radius: 40%;
+    border-radius: 35%;
     background-color: #90b6ff;
     font-family: 'Dela Gothic One', cursive;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
