--- a/todolist/templates/todolist/todolist.html
+++ b/todolist/templates/todolist/todolist.html
@@ -42,6 +42,7 @@
                         </button>
                         </a>
                         <form action="{% url "delete-task" task.id %}" method="post">
+                            {% csrf_token %}
                             <button id="done-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                      class="bi bi-check-circle" viewBox="0 0 16 16">
