--- a/todolist/static/todolist/single_task.css
+++ b/todolist/static/todolist/single_task.css
@@ -19,3 +19,19 @@ p {
 h2, h4 {
     background-color: #90b6ff;
 }
+
+.actions-mn {
+    width: 100%;
+    display: flex;
+}
+
+.actions-mn button {
+    padding: 10px;
+    background-color: burlywood;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.actions-mn button:hover {
+    background-color: darkcyan;
+}
