--- a/todolist/static/todolist/todolist.css
+++ b/todolist/static/todolist/todolist.css
@@ -24,7 +24,6 @@ br {
     color: black;
 }
 
-
 .single-task {
     display: flex;
     padding: 10px;
@@ -38,7 +37,7 @@ br {
     padding: 10px;
 }
 
-#id-title, #title-tb {
+#title, #title-tb {
     width: 50%;
 }
 
@@ -48,7 +47,7 @@ br {
 }
 
 #countdown, #countdown-tb {
-    width: 8%;
+    width: 10%;
     text-align: center;
 }
 
@@ -66,14 +65,12 @@ br {
     justify-content: space-evenly;
 }
 
-
 button {
-    padding: 5px;
-    border-radius: 35%;
+    padding: 10px;
+    border-radius: 15px;
     background-color: #90b6ff;
     font-family: 'Dela Gothic One', cursive;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    border: none;
     cursor: pointer;
 }
 
@@ -92,4 +89,21 @@ svg {
 
 #detail-btn:hover {
     background-color: #47dfff;
+}
+
+.actions-mn {
+    width: 100%;
+    display: flex;
+}
+
+.actions-mn button {
+    padding: 10px;
+    background-color: burlywood;
+    border-radius: 10px;
+    cursor: pointer;
+    box-shadow: none;
+}
+
+.actions-mn button:hover {
+    background-color: darkcyan;
 }
