--- a/todolist/templates/todolist/todolist.html
+++ b/todolist/templates/todolist/todolist.html
@@ -10,6 +10,18 @@
 
 {% block content %}
     <div class="content">
+        <div class="actions-mn">
+            <a href="{% url "add-task" %}">
+                <button>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
+                    </svg>
+                    ADD
+                </button>
+            </a>
+
+        </div>
             <div class="table-header">
                 <span id="title-tb">TITLE</span>
                 <span id="deadline-tb">DEADLINE</span>
@@ -19,7 +31,7 @@
             <br>
             {% for task in tasks %}
                 <div class="single-task">
-                    <div id="id-title">{{ task.title.capitalize }}</div>
+                    <div id="title">{{ task.title.capitalize }}</div>
                     <div id="deadline">{{ task.deadline|date:'d.m.Y, H:i' }}</div>
                     <div id="countdown">
                     {% for key, value in time_left.items %}
