--- a/todolist/templates/todolist/add_task.html
+++ b/todolist/templates/todolist/add_task.html
@@ -49,7 +49,7 @@
                 <div class="form-fields" id="description">
                     {{ form.description }} {{ form.description.errors }}
                 </div>
-            <button type="submit">Submit</button>
+            <button id="submit-form" type="submit">Submit</button>
         </form>
         </div>
     </div>
