--- a/todolist/static/todolist/single_task.css
+++ b/todolist/static/todolist/single_task.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Pixelify+Sans&family=Roboto+Condensed:wght@300&family=Young+Serif&display=swap');
+
 .content {
     margin-left: auto;
     margin-right: auto;
@@ -34,4 +36,8 @@ h2, h4 {
 
 .actions-mn button:hover {
     background-color: darkcyan;
+}
+
+button {
+    font-family: 'Dela Gothic One', cursive;
 }
