add register feature

--- a/todolist/templates/todolist/homepage.html
+++ b/todolist/templates/todolist/homepage.html
@@ -11,5 +11,6 @@
         <p>WELCOME - It's TO DO APP =)<p>
         <p>Please log in to start using all features</p>
         <p>Enjoy and good luck :)</p>
+        <a href="{% url 'register' %}">REGISTER</a>
     </div>
 {% endblock %}
