--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% block static %}
     {% endblock %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <title>
         {% block title %}{% endblock %}
@@ -15,20 +19,29 @@
 
 
 <body>
-<nav>
-    <div>
-        <a id="logo" href="{% url 'homepage' %}">HOME</a>
-        <a id="loging panel" href="{% url 'homepage' %}">Login</a>
+<nav class="navigation-bar-content">
+    <div >
+        <a class="nav-a-link" id="logo" href="{% url 'homepage' %}">TDL</a>
+        <a id="nav-log-btn" class="nav-a-link" href="{% url 'homepage' %}">Login</a>
+        <a id="nav-log-btn" class="nav-a-link" href="{% url 'register' %}">Register</a>
     </div>
-    <div class = "navigation-items">
-        <ul>
-            <li><a href="{% url 'task-list' %}">To Do APP</a></li>
-            <li><a href="{% url 'about-page' %}">ABOUT</a></li>
+    <div class="navbar-div">
+        <ul class="nav-ul">
+            <li><a class="nav-a-link" href="{% url 'task-list' %}">To Do APP</a></li>
+            <li><a class="nav-a-link" href="{% url 'about-page' %}">ABOUT</a></li>
         </ul>
     </div>
 </nav>
 
 {% block content %}{% endblock %}
 
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
