--- a/todolist/static/todolist/single_task.css
+++ b/todolist/static/todolist/single_task.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Pixelify+Sans&family=Roboto+Condensed:wght@300&family=Young+Serif&display=swap');
 
+
 .content {
     margin-left: auto;
     margin-right: auto;
@@ -7,19 +8,32 @@
     width: 70%;
     background-color: azure;
     border-radius: 1rem;
-    font-size: 1rem;
     padding: 20px 10px 20px;
     text-align: center;
     display: block;
     justify-content: center;
 }
 
-p {
+.task-details p {
     text-align: left;
+    margin: 4px;
 }
 
-h2, h4 {
+.task-details h2, .task-details h4 {
     background-color: #90b6ff;
+    padding: 5px;
+}
+
+.task-details h2 {
+    font-size: 1.5rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-weight: 900;
+}
+
+.task-details h4 {
+    font-size: 1.5rem;
+    font-weight: 400;
 }
 
 .actions-mn {
@@ -28,16 +42,14 @@ h2, h4 {
 }
 
 .actions-mn button {
-    padding: 10px;
+    padding: 6px;
     background-color: burlywood;
     border-radius: 10px;
     cursor: pointer;
+    font-size: 1rem;
+
 }
 
 .actions-mn button:hover {
     background-color: darkcyan;
-}
-
-button {
-    font-family: 'Dela Gothic One', cursive;
 }
