--- a/todolist/templates/todolist/homepage.html
+++ b/todolist/templates/todolist/homepage.html
@@ -9,13 +9,14 @@
 {% block content %}
     {% if messages %}
         {% for message in messages %}
-            {{ message }}
+            <div class="alert alert-success" role="alert">
+                {{ message }}
+            </div>
         {% endfor %}
     {% endif %}
     <div class="content">
         <p>WELCOME - It's TO DO APP =)<p>
         <p>Please log in to start using all features</p>
         <p>Enjoy and good luck :)</p>
-        <a href="{% url 'register' %}">REGISTER</a>
     </div>
 {% endblock %}
