--- a/static/styles.css
+++ b/static/styles.css
@@ -62,6 +62,8 @@ div.navbar-div {
 
 #nav-log-btn {
     font-size: 1.2rem;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 #nav-log-btn:hover {
