--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,13 @@
 <nav class="navigation-bar-content">
     <div >
         <a class="nav-a-link" id="logo" href="{% url 'homepage' %}">TDL</a>
-        <a id="nav-log-btn" class="nav-a-link" href="{% url 'homepage' %}">Login</a>
-        <a id="nav-log-btn" class="nav-a-link" href="{% url 'register' %}">Register</a>
+        {%  if user.is_authenticated %}
+            <a id="nav-log-btn" class="nav-a-link" href="{% url "logout" %}">Log Out</a>
+            Hello, <a id="nav-log-btn" class="nav-a-link" href="{% url 'profile' %}">{{ user.username }}</a>
+        {% else %}
+            <a id="nav-log-btn" class="nav-a-link" href="{% url 'login' %}">Login</a>
+            <a id="nav-log-btn" class="nav-a-link" href="{% url 'register' %}">Register</a>
+        {% endif %}
     </div>
     <div class="navbar-div">
         <ul class="nav-ul">
