--- a/todolist/static/todolist/login_form_style.css
+++ b/todolist/static/todolist/login_form_style.css
@@ -22,7 +22,6 @@
     border-radius: 10px;
     cursor: pointer;
     font-size: 1rem;
-
 }
 
 .actions-mn button:hover {
@@ -41,43 +40,22 @@
 }
 
 .form-names,
-.form-fields {
+.form-fields-container {
     padding: 2px;
 }
 
-.form-fields {
+.form-fields-container  {
     margin-bottom: 15px;
-    text-align: left;
 }
 
-.form-fields input,
-.form-fields textarea,
-.form-fields select {
+.form-fields-container input {
     border-radius: 5px;
     padding: 3px;
     background-color: #ffffe3;
     border: 1px solid green;
-}
-
-.form-fields input {
-    width: 100%;
-}
-
-#deadline input {
-    width: 30%;
-}
-
-.form-fields select {
     width: 50%;
 }
 
-.form-fields textarea {
-    width: 100%;
-}
-
-.form-names {
-    text-align: left;
-}
 
 #submit-form{
     margin: 8px;
@@ -96,4 +74,18 @@
     list-style: none;
     color: red;
     font-weight: bold;
+}
+
+#login-title {
+    font-size: 1.5rem;
+    margin-bottom: 3rem;
+}
+
+#login-footer{
+    margin-top: 1.5rem;
+}
+
+.form {
+    border: 1px solid #4CAF50;
+    background-color: #a9d8cb;
 }
