--- a/todolist/templates/todolist/profile.html
+++ b/todolist/templates/todolist/profile.html
@@ -2,8 +2,7 @@
 {% load static %}
 
 {% block static %}
-    <link rel="stylesheet" href="{% static 'todolist/single_task.css' %}">
-    <link rel="stylesheet" href="{% static "todolist/about.css" %}">
+{#    <link rel="stylesheet" href="{% static "todolist/about.css" %}">#}
 {% endblock %}
 
 {% block title %}About{% endblock %}
