--- a/todolist/templates/todolist/homepage.html
+++ b/todolist/templates/todolist/homepage.html
@@ -16,7 +16,9 @@
     {% endif %}
     <div class="content">
         <p>WELCOME - It's TO DO APP =)<p>
-        <p>Please log in to start using all features</p>
+        {% if not user.is_authenticated  %}
+            <p>Please log in to start using all features</p>
+        {% endif %}
         <p>Enjoy and good luck :)</p>
     </div>
 {% endblock %}
