--- a/todolist/templates/todolist/profile.html
+++ b/todolist/templates/todolist/profile.html
@@ -10,7 +10,7 @@
 {% block content %}
     <div class="content">
         <div class="actions-mn">
-            <a href="{% url "task-list" %}">
+            <a href="{% url "homepage" %}">
                 <button>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"></path>
