--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
     <div >
         <a class="nav-a-link" id="logo" href="{% url 'homepage' %}">TDL</a>
         {% if user.is_authenticated %}
-            Hello, <a id="nav-log-btn" class="nav-a-link" href="{% url 'profile' user.pk %}">{{ user.username }}</a>
             <a id="nav-log-btn" class="nav-a-link" href="{% url "logout" %}">Log Out</a>
+            Hello, <a id="nav-log-btn" class="nav-a-link" href="{% url 'profile' user.pk %}">{{ user.username }}</a>
         {% else %}
             <a id="nav-log-btn" class="nav-a-link" href="{% url 'login' %}">Log In</a>
             <a id="nav-log-btn" class="nav-a-link" href="{% url 'register' %}">Register</a>
@@ -33,7 +33,8 @@
     <div class="navbar-div">
         <ul class="nav-ul">
             {% if user.is_authenticated %}
-            <li><a class="nav-a-link" href="{% url 'task-list' %}">To Do APP</a></li>
+                <li><a class="nav-a-link" href="{% url 'task-list' %}">To Do List</a></li>
+                <li><a class="nav-a-link" href="{% url 'archive' %}">Archive</a></li>
             {% endif %}
             <li><a class="nav-a-link" href="{% url 'about-page' %}">ABOUT</a></li>
         </ul>
