--- a/todolist/templates/todolist/profile.html
+++ b/todolist/templates/todolist/profile.html
@@ -33,6 +33,7 @@
             <p> <b>Name:</b> {{ user.first_name }}</p>
             <p> <b>Last name:</b> {{ user.last_name }}</p>
             <p> <b>E-mail:</b> {{ user.email }}</p>
+            <p> <b>Password: </b><a>CHANGE</a></p>
         </div>
     </div>
 {% endblock %}
