--- a/todolist/templates/todolist/about.html
+++ b/todolist/templates/todolist/about.html
@@ -11,6 +11,6 @@
 {% block content %}
     <div class="content">
         <p>If u want to learn more about my portfolio, please visit my gitub:</p>
-        <a href="https://github.com/Majkels92">Michał Skowroński GITHUB Repository</a>
+        <a href="https://github.com/MikeSkowX">Michał Skowroński GITHUB Repository</a>
     </div>
 {% endblock %}
